# hsmud

./: HSMud.cabal
app/: Client.hs  Server.hs
src/: MudLib.hs
