name:                HSMud
version:             0.1.0.0
synopsis:            Text based game server
description:         Please see README.md
homepage:            http://github.com/engelsanchez/hsmud
license:             MIT
license-file:        LICENSE
author:              Engel A. Sanchez
maintainer:          engel.sanchez@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MudLib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hsmud-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network
                     , HSMud
  default-language:    Haskell2010

executable hsmud-client
  hs-source-dirs:      app
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network
                     , HSMud
  default-language:    Haskell2010

test-suite mud_hs_test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HSMud
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/engelsanchez/hsmud
